# bou-thakuranir_haat

./: .gitignore  01-hi.md  01-tts.txt  Makefile  QUESTION.md  README.md  all-bn-gemini-summary.md  all-bn-gemini.jsonl  all-bn-gemini.md  all-bn.md  all-en-gemini-full.md  all-en-gemini-lines.md  all-en-gemini-summary.md  all-en-gemini.jsonl  all-en-gemini.md  all-en-google.md  all-hi-gemini-full.md  all-hi-gemini-summary.md  all-hi-gemini.jsonl  all-hi-gemini.md  all-ja-gemini-full.md  all-ja-gemini-lines.md  all-ja-gemini-summary.md  all-ja-gemini.jsonl  all-ja-gemini.md  all-ja-google.md  bhasha-en.md  claude-log.md  en.md  flow-en.md  images.md  ja.md  preface-bn.md  proper_nouns_dictionary.json  pyproject.toml  questions-en-cache.tsv  questions-en.jsonl  questions-ja-cache.tsv  questions-ja.jsonl  segmentations.jsonl
all/: en-gemini-full.md  en-gemini.md  en-gemini.tsv  en-google.md  hi-gemini.md  ja-gemini-lines.md  ja-gemini.md  ja-gemini.tsv
chapters/: 01-hi.md
docs/: bhasha-en.md  bhasha-ja.md  flow-ja.md  shadhu-en.md  shadhu-ja.md
preface/: en-gemini.md  en-google.md  ja-gemini.md  ja-google.md
proper_nouns/: README.md  all.tsv  en-work.jsonl  en.jsonl  extract.py  ja-work.jsonl  ja.json  translate.py  utils.py
qa-eval/: .gitignore  FILTER.md  HYBRID.md  Makefile  PLAN.md  README-ja.md  README.md  VECTOR-HYBRID.md  answer.py  answer_ceiling.py  answer_extract.py  answer_filter.py  answer_hybrid.py  (+15 more)
scripts/: analyze_chapters.py  check_duplicates.py  create_rag_questions.py  extract_proper_nouns.py  generate_questions.py  generate_titles.py  imagen.py  jsonl_to_md.py  pyproject.toml  segment_chapters.py  split-line.py  translate_questions.py  translate_segments.py  utils.py
(+281 files in other folders)
