[project]
name = "bou-thakuranir-haat"
version = "0.1.0"
description = "Tagore's Bengali novel 'Bou-Thakuranir Haat' and its translations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llm7shi",
    "pip>=25.2",
    "spacy>=3.8.7",
    "taskipy>=1.14.1",
]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }

[tool.taskipy.tasks]
download-en = "spacy download en_core_web_sm"
download-ja = "spacy download ja_core_news_sm"
