[project]
name = "bou-thakuranir-haat"
version = "0.1.0"
description = "Tagore's Bengali novel 'Bou-Thakuranir Haat' and its translations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "en-core-web-sm",
    "ja-core-news-sm",
    "llm7shi",
    "pip>=25.2",
    "safetensors>=0.8.0",
    "spacy>=3.8.7",
]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
ja-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ja_core_news_sm-3.8.0/ja_core_news_sm-3.8.0-py3-none-any.whl" }
